--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,24 @@ video {
   height: 500px;
   margin: 0 auto;
 }
+
+/* scrollbar transparent background */
+*::-webkit-scrollbar {
+  width: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+*::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+*::-webkit-scrollbar-thumb {
+  background: transparent;
+}
+
+* {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
